--- a/0.1-intro-to-python.ipynb
+++ b/0.1-intro-to-python.ipynb
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -604,7 +604,7 @@
        "str"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,14 +712,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'d'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code should print \"world\"\n",
-    "# s[???]"
+    "s[-1:]"
    ]
   },
   {
@@ -1729,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1742,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -1843,9 +1854,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1853,13 +1865,13 @@
      "output_type": "stream",
      "text": [
       "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
-      "CPU times: user 192 ms, sys: 34.8 ms, total: 227 ms\n",
-      "Wall time: 226 ms\n"
+      "CPU times: user 185 ms, sys: 3.73 ms, total: 189 ms\n",
+      "Wall time: 190 ms\n"
      ]
     }
    ],
    "source": [
-    "%%time \n",
+    "%%time\n",
     "x = []\n",
     "for i in range(1000000):\n",
     "    x.append(i + 10)\n",
@@ -1877,13 +1889,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n",
+      "11\n",
+      "13\n",
+      "15\n",
+      "17\n",
+      "19\n",
+      "21\n",
+      "23\n",
+      "25\n",
+      "27\n",
+      "29\n",
+      "31\n",
+      "33\n",
+      "35\n",
+      "37\n",
+      "39\n",
+      "41\n",
+      "43\n",
+      "45\n",
+      "47\n",
+      "49\n",
+      "51\n",
+      "53\n",
+      "55\n",
+      "57\n",
+      "59\n",
+      "61\n",
+      "63\n",
+      "65\n",
+      "67\n",
+      "69\n",
+      "71\n",
+      "73\n",
+      "75\n",
+      "77\n",
+      "79\n",
+      "81\n",
+      "83\n",
+      "85\n",
+      "87\n",
+      "89\n",
+      "91\n",
+      "93\n",
+      "95\n",
+      "97\n",
+      "99\n",
+      "101\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "# your code\n",
+    "for i in range(1, 100000, 2):\n",
+    "    print i\n",
+    "    if i >= 100:\n",
+    "        break\n",
+    "    "
    ]
   },
   {
@@ -1938,13 +2013,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sa'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code"
+    "# your code\n",
+    "from itertools import izip\n",
+    "def compute_sum(x):\n",
+    "    return [xeven + xodd for xeven, xodd in izip(x[:-1], x[1:])]\n",
+    "\n",
+    "compute_sum([1,2,3])\n",
+    "\n",
+    "def inv_str(str):\n",
+    "    return str[1::-1]\n",
+    "\n",
+    "inv_str(\"asdf\")"
    ]
   },
   {
@@ -1976,7 +2072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
